--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -49,7 +49,7 @@ ul {
 }
 
 .app_bg {
-  background: url('./assets/bg.png');
+  background: url('../assets/bg.png');
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
