--- a/src/Sections/Gallery/Gallery.scss
+++ b/src/Sections/Gallery/Gallery.scss
@@ -1,3 +1,4 @@
+@import 'https://use.fontawesome.com/releases/v5.13.0/css/all.css';
 .gallery {
   background-color: var(--color-black);
   .gallery_text {
