--- a/src/Sections/Laurels/Laurels.scss
+++ b/src/Sections/Laurels/Laurels.scss
@@ -19,7 +19,14 @@
       margin-bottom: 20px;
     }
     .laurels_awards_content {
+      @include media(sm) {
+        flex-direction: column;
+      }
       .laurels_award {
+        @include media(sm) {
+          justify-content: center;
+          width: 100%;
+        }
         padding: 15px;
         margin-bottom: 15px;
         width: 50%;
@@ -31,7 +38,6 @@
           margin-right: 13px;
         }
         .laurels_awards_text {
-          height: 80px;
           h3 {
             color: var(--color-golden);
             margin-bottom: 0;
